--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Abyel Romero - Cano
-description: Aspiring Software Developer
+description: Aspiring Software Developer. \nhttps://github.com/abyel26
